update profile photo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="head-main text-center">
           <div class="container">
             <div class="logo-wrapper visible-sticky">
-              <!-- standard Logo--><a href="index.html" class="standard-logo text-logo"><img src="assets/img/avatar.png" alt="Boqing Gong">
+              <!-- standard Logo--><a href="index.html" class="standard-logo text-logo"><img src="assets/img/avantar.jpg" alt="Boqing Gong">
                 <div class="text-wrapper">
                   <h1 class="title">Boqing <span>Gong</span></h1>
                 </div></a>
@@ -88,7 +88,7 @@
               <div class="vcenter">
                 <div class="intor-box-wrapper">
                   <div class="intro-box">
-                    <div class="img-side shadow"><img src="assets/img/avatar.png" class="full-width"></div>
+                    <div class="img-side shadow"><img src="assets/img/avantar.jpg" class="full-width"></div>
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
