--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@ http://themeforest.net/user/owwwlab/
         <div class="head-main">
           <div class="container">
             <div class="logo-wrapper">
-              <!-- standard Logo--><a href="index.html" class="standard-logo text-logo"><img src="assets/img/avatar.png" alt="Dr. Boqing Gong">
+              <!-- standard Logo--><a href="index.html" class="standard-logo text-logo"><img src="assets/img/avantar.jpg" alt="Dr. Boqing Gong">
                 <div class="text-wrapper">
                   <h1 class="title">Boqing <span>Gong</span></h1>
                 </div></a>
