nips 2018 paper added

--- a/publications.html
+++ b/publications.html
@@ -133,7 +133,7 @@ http://themeforest.net/user/owwwlab/
 
                   <div class="tl-item pub-item">
                     <!--div class="content-wrapper"-->
-                      <h2 class="title">Remark 1: * indicates papers first-authored by my students (supervised or co-supervised). </h2>
+                      <h2 class="title">Remark 1: * indicates my former students (supervised or co-supervised). </h2>
                       <h2 class="title"> Remark 2: = indicates equal contribution among authors.</h2>
                       <a href="https://scholar.google.com/citations?user=lv9ZeVUAAAAJ&hl=en"><img src="assets/img/publications/series/google-scholar.png" alt="Google Scholar" class="pub-thumbnail" height="40" width="40"></a>
                       &nbsp&nbsp&nbsp
@@ -164,74 +164,102 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2018</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;NIPS</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Synthesize Policies for Transfer and Adaptation across Environments and Tasks</h3>
+                      <div class="description">
+                        <div class="citation"><span> <a href="https://openreview.net/forum?id=SJx9GQb0-">Advances in Neural Information Processing Systems <b>(NIPS)</b> 2018 </a><span class="block-elem">H Hu=, L Yu=, <b>B Gong</b>, and F Sha</span></span></div>
+                        <font color="blue">--> [ <a href="papers/ct-wgan.pdf">PDF coming soon</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="https://openreview.net/forum?id=SJx9GQb0-">Improving the Improved Training of Wasserstein GANs: A Consistency Term and Its Dual Effect *</a></h3>
+                      <h3 class="title"><a href="https://openreview.net/forum?id=SJx9GQb0-">Improving the Improved Training of Wasserstein GANs: A Consistency Term and Its Dual Effect</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="https://openreview.net/forum?id=SJx9GQb0-">International Conference on Learning Representations <b>(ICLR)</b> 2018 </a><span class="block-elem">X Wei=, <b>B Gong=</b>, Z Liu, and L Wang</span></span></div>
+                        <div class="citation"><span> <a href="https://openreview.net/forum?id=SJx9GQb0-">International Conference on Learning Representations <b>(ICLR)</b> 2018 </a><span class="block-elem">X Wei*=, <b>B Gong=</b>, Z Liu, and L Wang</span></span></div>
+                        <font color="blue">--> [ <a href="papers/ct-wgan.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=SJx9GQb0-">Reviews</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/biuyq/CT-GAN">Code</a> ]</font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization</a> * [<a href="#">Supplementary</a>]</h3>
+                      <h3 class="title"><a href="#">How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">Y Li, L Wang, T Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">Y Li*, L Wang, T Yang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/local-dpp.pdf">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="#">Improving Sequential Determinantal Point Processes for Supervised Video Summarization</a> * [<a href="#">Supplementary</a>]</h3>
+                      <h3 class="title"><a href="#">Improving Sequential Determinantal Point Processes for Supervised Video Summarization</a> </h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">A Sharghi, A Borji, C Li, T Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b> 2018 </a><span class="block-elem">A Sharghi*, A Borji, C Li, T Yang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/g-dpp.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/g-dpp-supp.pdf">Supplement</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="papers/cvpr18-deep-face.pdf">Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting</a> * [<a href="papers/cvpr18-deep-face-supp.pdf">Supplementary</a>]</h3>
+                      <h3 class="title"><a href="papers/cvpr18-deep-face.pdf">Face Detector Adaptation without Negative Transfer or Catastrophic Forgetting</a> </h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">M A Jamal, H Li, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">M A Jamal*, H Li, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/cvpr18-deep-face.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/cvpr18-deep-face-supp.pdf">Supplement</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="papers/cvpr18-geometry-cnn.pdf">Geometry-Guided CNN for Self-Supervised Video Representation Learning</a> *</h3>
+                      <h3 class="title"><a href="papers/cvpr18-geometry-cnn.pdf">Geometry-Guided CNN for Self-Supervised Video Representation Learning</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-geometry-cnn.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">C Gan, <b>B Gong</b>, K Liu, H Su, and L Guibas</span></span></div>
+                        <div class="citation"><span> <a href="papers/cvpr18-geometry-cnn.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a><span class="block-elem">C Gan*, <b>B Gong</b>, K Liu, H Su, and L Guibas</span></span></div>
+                        <font color="blue">--> [ <a href="papers/cvpr18-geometry-cnn.pdf">PDF</a> ]  </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="papers/cvpr18-tvnet.pdf">End-to-End Learning of Motion Representation for Video Understanding</a> [<a href="papers/cvpr18-tvnet-supp.pdf">Supplementary</a>]</h3>
+                      <h3 class="title"><a href="papers/cvpr18-tvnet.pdf">End-to-End Learning of Motion Representation for Video Understanding</a> </h3>
                       <div class="description">
                         <div class="citation"><span> <a href="papers/cvpr18-tvnet.pdf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b> 2018 </a> <b><font color="blue">(Spotlight)</font></b><span class="block-elem">L Fan, W Huang, C Gan, S Ermon, <b>B Gong</b>, and J Huang</span></span></div>
+                        <font color="blue">--> [ <a href="papers/cvpr18-tvnet.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/cvpr18-tvnet-supp.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/LijieFan/tvnet">Code</a> ]</font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;WACV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="papers/wacv18.pdf">A Semi-Supervised Two-Stage Approach to Learning from Noisy Labels *</a></h3>
+                      <h3 class="title"><a href="papers/wacv18.pdf">A Semi-Supervised Two-Stage Approach to Learning from Noisy Labels </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b> 2018 </a><span class="block-elem">Y Ding, L Wang, D Fan, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="papers/wacv18.pdf">IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b> 2018 </a><span class="block-elem">Y Ding*, L Wang, D Fan, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/wacv18.pdf">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TOMM</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="papers/tomm.pdf">Learning a Multi-Concept Video Retrieval Model with Multiple Latent Variables</a> * </h3>
+                      <h3 class="title"><a href="papers/tomm.pdf">Learning a Multi-Concept Video Retrieval Model with Multiple Latent Variables</a>  </h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/tomm.pdf">ACM Transactions on Multimedia Computing, Communications, and Applications <b>(TOMM)</b> 2018 </a><span class="block-elem">A Mazaheri, <b>B Gong</b>, and M Shah</span></span></div>
+                        <div class="citation"><span> <a href="papers/tomm.pdf">ACM Transactions on Multimedia Computing, Communications, and Applications <b>(TOMM)</b> 2018 </a><span class="block-elem">A Mazaheri*, <b>B Gong</b>, and M Shah</span></span></div>
+                        <font color="blue">--> [ <a href="papers/tomm.pdf">PDF</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TMSCS</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title"><a href="https://ieeexplore.ieee.org/document/8360447/">Exploring A SOT-MRAM based In-Memory Computing for Data Processing</a>  </h3>
+                      <div class="description">
+                        <div class="citation"><span> IEEE Transactions on Multi-Scale Computing Systems <b>(TMSCS)</b> 2018 </a><span class="block-elem">Z He, Z Yang*, S Angizi, <b>B Gong</b>, and D Fan</span></span></div>
+                        <font color="blue">--> [ <a href="https://ieeexplore.ieee.org/document/8360447/">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
