update papers of 2017

--- a/publications.html
+++ b/publications.html
@@ -266,36 +266,40 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2017</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">Curriculum Domain Adaptation for Semantic Segmentation of Urban Scenes *</a></h3>
+                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">Curriculum Domain Adaptation for Semantic Segmentation of Urban Scenes </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">Y Zhang, P David, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">Y Zhang*, P David, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/iccv17-curriculum.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://arxiv.org/pdf/1707.09465.pdf">Extended version</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/YangZhang4065/AdaptationSeg">Code</a> ]</font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation *</a></h3>
+                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">C Gan, Y Li, H Li, C Sun, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">C Gan*, Y Li, H Li, C Sun, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/iccv17-vqs.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://arxiv.org/pdf/1708.04686.pdf">Extended version</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Sharghi_Query-Focused_Video_Summarization_CVPR_2017_paper.html">Query-Focused Video Summarization: Dataset, Evaluation, and A Memory Network Based Approach *</a></h3>
+                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Sharghi_Query-Focused_Video_Summarization_CVPR_2017_paper.html">Query-Focused Video Summarization: Dataset, Evaluation, and A Memory Network Based Approach </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Sharghi_Query-Focused_Video_Summarization_CVPR_2017_paper.html">IEEE Conference on Computer Vision and Pattern Recognition  <b>(CVPR)</b> 2017 </a><span class="block-elem">A Sharghi, J Laurel, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Sharghi_Query-Focused_Video_Summarization_CVPR_2017_paper.html">IEEE Conference on Computer Vision and Pattern Recognition  <b>(CVPR)</b> 2017 </a><span class="block-elem">A Sharghi*, J Laurel*, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="papers/cvpr17-vsum.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/cvpr17-vsum-supp.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://www.dropbox.com/s/075fx0b027xm1e5/Drink_Food.mp4?dl=0"> Summary 1 (drink+food)</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://www.dropbox.com/s/vexv5tpisoox3x8/Chocolate_Street.mp4?dl=0"> Summary 2 (street+chocolate)</a> ]</font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Kalayeh_Improving_Facial_Attribute_CVPR_2017_paper.html">Improving Facial Attribute Prediction using Semantic Segmentation *</a></h3>
+                      <h3 class="title"><a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Kalayeh_Improving_Facial_Attribute_CVPR_2017_paper.html">Improving Facial Attribute Prediction using Semantic Segmentation</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_cvpr_2017/html/Kalayeh_Improving_Facial_Attribute_CVPR_2017_paper.html">IEEE Conference on Computer Vision and Pattern Recognition  <b>(CVPR)</b> 2017 </a><span class="block-elem">M Kalayeh, <b>B Gong</b>, and M Shah</span></span></div>
+                        <font color="blue">--> [ <a href="http://openaccess.thecvf.com/content_cvpr_2017/papers/Kalayeh_Improving_Facial_Attribute_CVPR_2017_paper.pdf">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -305,15 +309,17 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title"><a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_3">Geodesic Flow Kernel and Landmarks: Kernel Methods for Unsupervised Domain Adaptation</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_3">Domain Adaptation in Computer Vision Applications, Springer  <b>(Book Chapter)</b> 2017 </a><span class="block-elem"><b>B Gong</b>, K Grauman, and F Sha</span></span></div>
+                        <font color="blue">--> [ <a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_3">Link</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="assets/GFK.zip">Code (GFK)</a> ] </font>
                       </div>
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;Book<br>&nbsp;&nbsp;Chapter</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title"><a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_15">A Multisource Domain Generalization Approach to Visual Attribute Detection *</a></h3>
+                      <h3 class="title"><a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_15">A Multisource Domain Generalization Approach to Visual Attribute Detection </a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_15">Domain Adaptation in Computer Vision Applications, Springer  <b>(Book Chapter)</b> 2017 </a><span class="block-elem">C Gan, T Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_15">Domain Adaptation in Computer Vision Applications, Springer  <b>(Book Chapter)</b> 2017 </a><span class="block-elem">C Gan*, T Yang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">--> [ <a href="https://link.springer.com/chapter/10.1007/978-3-319-58347-1_15">Link</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -323,6 +329,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title"><a href="papers/acii17.pdf">Weighted Geodesic Flow Kernel for Interpersonal Mutual Inuence Modeling and Emotion Recognition in Dyadic Interactions</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="papers/acii17.pdf">Affective Computing and Intelligence Interaction   <b>(ACII)</b> 2017 </a> <b><font color="blue">(Oral)</font></b><span class="block-elem">Z Yang, <b>B Gong</b>, and S Narayanan</span></span></div>
+                        <font color="blue">--> [ <a href="papers/acii17.pdf">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
