--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                         <div class="tl-item"></div>
 
                         <div class="tl-item">
-                          <h5 class="title">Eight Papers Published in 2018</h5>
+                          <h5 class="title">Nine Papers Published in 2018</h5>
                           <div class="description"> 
                             <p>
-                              Three at IEEE CVPR, two at ECCV, one at ICLR, one at ACM TOMM, and one at IEEE WACV.
+                              One at NIPS, three at IEEE CVPR, two at ECCV, one at ICLR, one at ACM TOMM, and one at IEEE WACV.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
@@ -205,14 +205,28 @@
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="#"><i class="icon oi-forward"></i><span>Slides coming soon</span></a>
                           </div>
-                          <h5 class="title">06/2018: Talk at CVPR The 2nd Workshop on Visual Understanding by Learning from Web Data</h5>
+                          <h5 class="title">09/2018: Talk at ECCV Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation Environments</a></u></h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Domain Adaptation and Transfer: All You Need to Use Simulation 'for Real'".</b> Domain adaptation from simulation to the real world, and vice versa, for semantic segmentation and learning policies. 
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/simulation-da.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
+                          </div>
+                          <h5 class="title">09/2018: Talk at ECCV Workshop on <u><a href="https://www.cefrl.org/">Compact and Efficient Feature Representation and Learning  in Computer Vision</a></u></h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Learning and Adapting from the Web for Visual Recognition".</b>
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/Web-DA.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
+                          </div>
+                          <h5 class="title">06/2018: Talk at CVPR The 2nd Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Visual Understanding by Learning from Web Data</a></u></h5>
                           <div class="description"> 
                             <p>
                               <b>"Learning from Web Data and Adapting Beyond It",</b> which inlcudes the Web data of 1) noisy labels, 2) accurate labels, and 3) multi-modalities by semi-supervised learning, curriculum learning, and kernel mean matching, respectively. It mainly covers our following works: <a href="papers/wacv18.pdf">[Ding et al., WACV'18]</a>, <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>, <a href="papers/cvpr18-geometry-cnn.pdf">[Gan et al., CVPR'18]</a>, <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html">[Zhang et al., ICCV'17]</a>, <a href="papers/eccv16-webly.pdf">[Gan et al., ECCV'16]</a>, and <a href="https://arxiv.org/abs/1607.05177">[Sharghi et al., ECCV'16]</a>.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/Web-learning.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
                           </div>
-                          <h5 class="title">05/2018: Be serving as an Area Chair for IEEE WACV 2019</h5>
+                          <h5 class="title">05/2018: Be serving as an Area Chair for <u><a href="http://wacv19.wacv.net/">IEEE WACV 2019</a></u></h5>
                           <h5 class="title">01/2018: Joined Tencent AI Lab (Seattle)</h5>
                         </div>
 
