--- a/publications.html
+++ b/publications.html
@@ -279,7 +279,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation </a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="http://openaccess.thecvf.com/content_iccv_2017/html/Gan_VQS_Linking_Segmentations_ICCV_2017_paper.html">IEEE International Conference on Computer Vision <b>(ICCV)</b> 2017 </a><span class="block-elem">C Gan*, Y Li, H Li, C Sun, and <b>B Gong</b></span></span></div>
-                        <font color="blue">--> [ <a href="papers/iccv17-vqs.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://arxiv.org/pdf/1708.04686.pdf">Extended version</a> ] </font>
+                        <font color="blue">--> [ <a href="papers/iccv17-vqs.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://arxiv.org/pdf/1708.04686.pdf">Extended version</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/Cold-Winter/vqs">Code and data</a> ] </font>
                       </div>
                     </div>
                   </div>
