--- a/publications.html
+++ b/publications.html
@@ -144,24 +144,24 @@ http://themeforest.net/user/owwwlab/
                     <!--/div-->
                   </div>
 
-                  <div class="tl-item active pub-item"><span class="item-section">Working papers</span>
+                  <!--div class="tl-item active pub-item"><span class="item-section">Working papers</span-->
                     <!--div class="elem-wrapper"><img src="assets/img/publications/series/PDF1.jpg" alt="item thumbnail" class="pub-thumbnail"></div-->
-                    <div class="content-wrapper">
+                    <!--div class="content-wrapper">
                       <h3 class="title"><a href="https://arxiv.org/abs/1608.06608">Infinite-Label Learning with Semantic Output Codes *</a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="https://arxiv.org/abs/1608.06608">ArXiv preprint arXiv:1608.06608 </a><span class="block-elem">Y Zhang, R Acharyya, J Liu, and <b>B Gong</b></span></span></div>
                       </div>
                     </div>
                   </div>
-                  <div class="tl-item pub-item">
+                  <div class="tl-item pub-item"-->
                     <!--div class="elem-wrapper"><img src="assets/img/publications/series/cover-3.jpg" alt="item thumbnail" class="pub-thumbnail"></div-->
-                    <div class="content-wrapper">
+                    <!--div class="content-wrapper">
                       <h3 class="title"><a href="https://arxiv.org/abs/1707.00133">Weighted Singular Value Thresholding and its Application to Background Estimation </a></h3>
                       <div class="description">
                         <div class="citation"><span> <a href="https://arxiv.org/abs/1707.00133">ArXiv preprint arXiv:1707.00133 </a><span class="block-elem">A Dutta, <b>B Gong</b>, X Li, M Shah</span></span></div>
                       </div>
                     </div>
-                  </div>
+                  </div-->
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2018</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;NIPS</div><br>
