--- a/research.html
+++ b/research.html
@@ -113,6 +113,28 @@ http://themeforest.net/user/owwwlab/
         </div>
         <!-- #####End page head
         -->
+        <section class="bg-gray section section-narrow-2">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-9">
+                    
+                    <h3 class="with-sideline">Slides from recent talks</h3>
+                      <ul style="list-style-type:disc">
+                      <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf"> --> <u>[PDF]</u> </a><br>
+                        <i>Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i><br>
+                      </li>
+                        <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf"> --> <u>[PDF]</u> </a><br>
+                      <i>Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
+                        <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf"> --> <u>[PDF]</u> </a><br>
+                          <i>Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
+                        <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf"> --> <u>[PDF]</u></a><br>
+                          <i>Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
+                      </ul>
+
+                  </div>
+                </div>
+              </div>
+            </section>
         <section class="page-contents">
           <!-- #####Begin main area-->
           <section id="main-area">
@@ -336,8 +358,8 @@ http://themeforest.net/user/owwwlab/
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
                 <div class="heading-with-sub m-bottom-50">
-                  <h3 class="title sans-font m-bottom-30">Dr. Boqing Gong</h3>
-                  <h4 class="subtitle">For more information you can contact me via <a href="mailto:boqinggo@outlook.com"><b>boqinggo@outlook.com</b></a>.</h4>
+                  <h3 class="title sans-font m-bottom-30"><a href="index.html" title="Home">Dr. Boqing Gong</a></h3>
+                  <h4 class="subtitle">Contact me via <a href="mailto:boqinggo@outlook.com"><b>BoqingGo@outlook.com</b></a>.</h4>
                 </div>
                 <!--div class="sp-line-0"></div>
                 <ul class="m-top-30 social-icons shape-circle skin-white hover-dark">
