--- a/index.html
+++ b/index.html
@@ -582,10 +582,10 @@
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
                 <div class="heading-with-sub m-bottom-50">
-                  <h3 class="title sans-font m-bottom-30">Under Construction. More updates coming soon!</h3>
-                  <h4 class="subtitle">Last updated: 2018-01-28</h4>
+                  <h3 class="title sans-font m-bottom-30"><a href="index.html" title="Home">Dr. Boqing Gong</a></h3>
+                  <h4 class="subtitle">Contact me via <a href="mailto:boqinggo@outlook.com"><b>BoqingGo@outlook.com</b></a>.</h4>
                 </div>
-                <div class="sp-line-0"></div>
+                <!--div class="sp-line-0"></div>
                 <ul class="m-top-30 social-icons shape-circle skin-white hover-dark">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -594,7 +594,7 @@
                   <li><a href="#"><i class="fa fa-skype"></i></a></li>
                   <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                 </ul>
-              </div>
+              </div-->
             </div>
           </div>
         </div>
