--- a/publications.html
+++ b/publications.html
@@ -562,8 +562,8 @@ http://themeforest.net/user/owwwlab/
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
                 <div class="heading-with-sub m-bottom-50">
-                  <h3 class="title sans-font m-bottom-30">Dr. Boqing Gong</h3>
-                  <h4 class="subtitle">For more information you can contact me via <a href="mailto:boqinggo@outlook.com"><b>BoqingGo@outlook.com</b></a>.</h4>
+                  <h3 class="title sans-font m-bottom-30"><a href="index.html" title="Home">Dr. Boqing Gong</a></h3>
+                  <h4 class="subtitle">Contact me via <a href="mailto:boqinggo@outlook.com"><b>BoqingGo@outlook.com</b></a>.</h4>
                 </div>
                 <!--div class="sp-line-0"></div>
                 <ul class="m-top-30 social-icons shape-circle skin-white hover-dark">
