--- a/research.html
+++ b/research.html
@@ -113,28 +113,68 @@ http://themeforest.net/user/owwwlab/
         </div>
         <!-- #####End page head
         -->
-        <section class="bg-gray section section-narrow-2">
+        <section class="section bg-gray section-narrow-2">
               <div class="container">
                 <div class="row">
-                  <div class="col-md-9">
-                    
-                    <h3 class="with-sideline">Slides from recent talks</h3>
-                      <ul style="list-style-type:disc">
-                      <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf"> --> <u>[PDF]</u> </a><br>
-                        <i>Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i><br>
-                      </li>
-                        <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf"> --> <u>[PDF]</u> </a><br>
-                      <i>Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
-                        <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf"> --> <u>[PDF]</u> </a><br>
-                          <i>Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
-                        <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf"> --> <u>[PDF]</u></a><br>
-                          <i>Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
-                      </ul>
-
+                  <div class="col-md-4">
+                    <div class="heading-with-sub">
+                      <h2 class="title">Slides from recent talks</h2>
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Learning and Adapting from the Web for Visual Recognitiona --> <a href="assets/Web-DA.pdf"> <u>[PDF]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Domain Adaptation and Transfer: All You Need to Use Simulation "for Real" --> <a href="assets/simulation-da.pdf"><u>[PDF]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization --> <a href="assets/dpp.pdf"><u>[PDF]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Domain Adaptation for Robust Visual Recognition --> <a href="assets/domain-adaptation.pdf"> <u>[PDF]</u></a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </section>
+                    
         <section class="page-contents">
           <!-- #####Begin main area-->
           <section id="main-area">
