--- a/index.html
+++ b/index.html
@@ -146,18 +146,25 @@
                     <h4 class="with-sideline">Slides from recent talks</h4>
                       <ul style="list-style-type:disc">
                         <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf"> --> <u>[PDF]</u> </a><br>
-                      <i>Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
+                      <i>In CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
                         <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf"> --> <u>[PDF]</u> </a><br>
-                      <i>Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
+                      <i>In ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
                         <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf"> --> <u>[PDF]</u> </a><br>
-                          <i>Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
+                          <i>In UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
                         <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf"> --> <u>[PDF]</u></a><br>
-                          <i>Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
+                          <i>In ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
                       </ul>
 
                   </div>
                   <div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
+                    <p><br></p>
+                    <h6>Area chair / senior program committee member of ICML'19, AISTATS'19, and WACV'18--2019</h6>
+                    <p></p>
+                    <h6 >Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</h6>
+                    <p></p>
+                    <h6 >CVPR'17 Outstanding Reviewer</h6>
+                    
                   </div>
                 </div>
               </div>
