--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                   <div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
+                    <h3 class="with-sideline">Recent services</h3>
                     <h6>Area chair / senior program committee member of ICML'19, AISTATS'19, and WACV'18--2019</h6>
                     <p></p>
                     <h6 >Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</h6>
