--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <h6>Area chair / senior program committee member of ICML'19, AISTATS'19, and WACV'18--2019</h6>
+                    <p>Area chair / senior program committee member of ICML'19, AISTATS'19, and WACV'18--2019</p>
                     <p></p>
-                    <h6 >Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</h6>
+                    <p>Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
                     <p></p>
-                    <h6 >CVPR'17 Outstanding Reviewer</h6>
+                    <p>CVPR'17 Outstanding Reviewer</p>
                     
                   </div>
                 </div>
