--- a/index.html
+++ b/index.html
@@ -141,27 +141,27 @@
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
                     <p>I am a Principal Researcher of Tencent AI Lab at Seattle, working on machine learning and computer vision. Before joining Tencent, I was a tenure-track Assistant Professor in University of Central Florida (UCF). My research in UCF was supported in part by an NSF CRII award (so-PI, received in 2016) and an NSF BIGDATA award (PI, received in 2017), both of which were the first of their kinds ever granted to UCF. I actively serve on NSF panels and the program committees of computer vision conferences (CVPR, ICCV, ECCV, etc.) and machine learning conferences (ICML, NIPS, AISTATS, etc.). I was an area chair of IEEE WACV'18 and a mentor of its PhD forum. In 2015, I received a Ph.D. degree in Computer Science from the University of Southern California, where my work was partially supported by the Viterbi Fellowship.</p>
-                    <p><b>Recent research interests: domain adaptation, reinforcement learning, and visual analytics of objects, human activities, scenes, and their attributes.</b></p>
+                    <p><br></p>
+
                     
-                    <h4 class="with-sideline">Slides from recent talks</h4>
-                      <ul style="list-style-type:disc">
-                        <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf"> --> <u>[PDF]</u> </a><br>
+                    <h4 class="with-sideline"><u> <a href="research.html">Slides from recent talks </a></u> </h4>
+                      <!--ul style="list-style-type:disc">
+                        <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf">  <u>[PDF]</u> </a><br>
                       <i>In CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
-                        <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf"> --> <u>[PDF]</u> </a><br>
+                        <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf">  <u>[PDF]</u> </a><br>
                       <i>In ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
-                        <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf"> --> <u>[PDF]</u> </a><br>
+                        <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf">  <u>[PDF]</u> </a><br>
                           <i>In UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
-                        <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf"> --> <u>[PDF]</u></a><br>
+                        <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf">  <u>[PDF]</u></a><br>
                           <i>In ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
-                      </ul>
+                      </ul-->
 
                   </div>
                   <div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
-                    <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair / senior program committee member of ICML'19, AISTATS'19, and WACV'18--2019</p>
+                    <p>Area chair of ICCV'19, ICML'19, AISTATS'19, and WACV'18-19</p>
                     <p></p>
                     <p>Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
                     <p></p>
