--- a/research.html
+++ b/research.html
@@ -113,7 +113,7 @@ http://themeforest.net/user/owwwlab/
         </div>
         <!-- #####End page head
         -->
-        <section class="section bg-gray section-narrow-2">
+        <section class="section bg-white section-narrow-2">
               <div class="container">
                 <div class="row">
                   <div class="col-md-4">
@@ -124,10 +124,21 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-md-8">
                     <div class="row">
                       <div class="col-md-12">
+                      	<div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Curriculum Domain Adaptation: Using Simulation for Real &#10230; <a href="assets/CDA.pdf"> <u>[PDF]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at IEEE BIGDATA Workshop on <u><a href="http://www.cis.umassd.edu/~mshao/BDTL2018/index.html">Big Data Transfer Learning</a></u> 
+                              </p>
+                            </div>
+                          </div>
+                        </div>
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Learning and Adapting from the Web for Visual Recognitiona --> <a href="assets/Web-DA.pdf"> <u>[PDF]</u> </a></h3>
+                            <h3 class="title">Learning and Adapting from the Web for Visual Recognitiona &#10230; <a href="assets/Web-DA.pdf"> <u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u>
@@ -138,7 +149,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Domain Adaptation and Transfer: All You Need to Use Simulation "for Real" --> <a href="assets/simulation-da.pdf"><u>[PDF]</u> </a></h3>
+                            <h3 class="title">Domain Adaptation and Transfer: All You Need to Use Simulation "for Real" &#10230; <a href="assets/simulation-da.pdf"><u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u>
@@ -149,7 +160,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization --> <a href="assets/dpp.pdf"><u>[PDF]</u> </a></h3>
+                            <h3 class="title">Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization &#10230; <a href="assets/dpp.pdf"><u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017
@@ -160,7 +171,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Domain Adaptation for Robust Visual Recognition --> <a href="assets/domain-adaptation.pdf"> <u>[PDF]</u></a></h3>
+                            <h3 class="title">Domain Adaptation for Robust Visual Recognition &#10230; <a href="assets/domain-adaptation.pdf"> <u>[PDF]</u></a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017
@@ -178,13 +189,13 @@ http://themeforest.net/user/owwwlab/
         <section class="page-contents">
           <!-- #####Begin main area-->
           <section id="main-area">
-            <section class="section section-narrow-2">
+            <section class="section bg-gray section-narrow-2">
               <div class="container">
                 <div class="row">
                   <div class="col-md-4">
                     <div class="heading-with-sub">
-                      <h2 class="title">Current Reseach</h2>
-                      <p class="lead">I am currently working on the following research topics</p>
+                      <h2 class="title">Recent Reseach</h2>
+                      <p class="lead">Some of the topics I have been working on over the recent couple of years.</p>
                     </div>
                   </div>
                   <div class="col-md-8">
@@ -256,7 +267,7 @@ http://themeforest.net/user/owwwlab/
                 </div>
               </div>
             </section>
-            <section class="section bg-gray section-narrow-2">
+            <section class="section bg-white section-narrow-2">
               <div class="container">
                 <div class="row">
                   <div class="col-md-4">
@@ -349,7 +360,7 @@ http://themeforest.net/user/owwwlab/
                 <div class="row call-out tb-vcenter-wrapper">
                   <div class="col-sm-9 vcenter">
                     <h2 class="title">List of Publications</h2>
-                    <h2 class="sub-title"><b>Work hard, make extraordinary discoveries, and publish to make the work easy and simple.</b></h2>
+                    <h2 class="sub-title"><b>Work hard, make extraordinary discoveries, and publish to make the work simple.</b></h2>
                   </div>
                   <div class="col-sm-3 vcenter text-center"><a href="publications.html" class="btn btn-medium btn-wide btn-skin-red btn-circle"> <span>view</span></a></div>
                 </div>
