talk slides in Nov and Dec

--- a/index.html
+++ b/index.html
@@ -216,16 +216,23 @@
                           <h5 class="title">Nine Papers Published in 2018</h5>
                           <div class="description"> 
                             <p>
-                              on NIPS (1), IEEE CVPR (3), ECCV (2), ICLR (1), ACM TOMM (1), and IEEE WACV (1), respectively.
+                              on NeurIPS (1), IEEE CVPR (3), ECCV (2), ICLR (1), ACM TOMM (1), and IEEE WACV (1), respectively.
                             </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">12/2018: Talk at IEEE BIGDATA Workshop on Big Data Transfer Learning</h5>
+                          <div class="description"> 
+                            <p>
+                              <b>"Curriculum Domain Adaptation: Using Simulation for Real".</b> 
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/CDA.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
                           </div>
                           <h5 class="title">11/2018: Talk at INFORMS Special Session on Stochastic Optimization Methods and Approximation Theory in Machine Learning</h5>
                           <div class="description"> 
                             <p>
                               <b>"The Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks".</b> Dropout, which independently zeros out the outputs of neurons at random, has become one of the most popular techniques in training deep neural networks due to its simplicity and remarkable effectiveness. This talk reveals multiple shades of dropout for both discriminative and generative deep neural networks, mainly covering our following works: <a href="https://papers.nips.cc/paper/6561-improved-dropout-for-shallow-and-deep-learning">[Li et al., NIPS'16]</a> and <a href="https://openreview.net/forum?id=SJx9GQb0-">[Wei, Gong, et al., ICLR'18]</a>.
                             </p>
-                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="#"><i class="icon oi-forward"></i><span>Slides coming soon</span></a>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="assets/dropout-informs.pdf"><i class="icon oi-forward"></i><span>read more: Slides</span></a>
                           </div>
                           <h5 class="title">09/2018: Talk at ECCV Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation Environments</a></u></h5>
                           <div class="description"> 
