--- a/research.html
+++ b/research.html
@@ -130,7 +130,18 @@ http://themeforest.net/user/owwwlab/
                             <h3 class="title">Curriculum Domain Adaptation: Using Simulation for Real &#10230; <a href="assets/CDA.pdf"> <u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
-                                Presented at IEEE BIGDATA Workshop on <u><a href="http://www.cis.umassd.edu/~mshao/BDTL2018/index.html">Big Data Transfer Learning</a></u> 
+                                Presented at IEEE BIGDATA 2018 Workshop on <u><a href="http://www.cis.umassd.edu/~mshao/BDTL2018/index.html">Big Data Transfer Learning</a></u> 
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks &#10230; <a href="assets/dropout-informs.pdf"> <u>[PDF]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at INFORMS 2018 special session on Stochastic Optimization Methods and Approximation Theory in Machine Learning
                               </p>
                             </div>
                           </div>
